Add join league button and add functionalities